# course-work-y2s2

./: CMakeLists.txt  Image.cpp  Image.h  ImageMPI.cpp  ImageMPI.h  README.md  main.cpp  mainMPI.cpp  mainTimeCmp.cpp
